# python

./: 250704 5급 2차│행정│행정학.hwp  pyproject.toml  settings.json
src/graph/: __init__.py  combi.yml  gg.py  gg_theme.yml  schema_gg_theme.json
src/processor/: data.py  my_sql_backup.py  wpp_trimming.ipynb
src/processor/faostat/: base_process.py  faostat_utilizer.py
src/processor/sql/: fk_relationship.sql  table_column.sql  wpp_core_view.sql  wpp_region_dependency.sql
